--- a/Project1/app/src/main/res/values/strings.xml
+++ b/Project1/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="hello_world">Hello, World!</string>
+    <string name="convert_string">Convert</string>
+    <string name="dollars_hint">dollars</string>
+    <string name="no_value_string">No Value</string>
 </resources>
