--- a/AddNameSaveData1/app/src/main/res/values/strings.xml
+++ b/AddNameSaveData1/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Add Name Save Data 1</string>
+    <string name="nameView">No names to display</string>
+    <string name="add_name">Add Name</string>
+    <string name="enter_name">Enter Name</string>
 </resources>
