tried to fix logcat variable

--- a/LifeCycleAwareProject/app/src/main/res/values/strings.xml
+++ b/LifeCycleAwareProject/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">LifeCycleAwareProject</string>
+    <string name="mainfragment">MainFragment</string>
+    <string name="button">Button</string>
 </resources>
