--- a/NavigationProject/app/src/main/res/values/strings.xml
+++ b/NavigationProject/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="image1">image1</string>
     <string name="image3">image3</string>
     <string name="image2">image2</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="textview">TextView</string>
 </resources>
