--- a/RoomDemo/app/src/main/res/values/strings.xml
+++ b/RoomDemo/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">RoomDemo</string>
+    <string name="product_id">Product ID</string>
+    <string name="not_assigned">Not assigned</string>
+    <string name="product_name">Product Name</string>
+    <string name="product_quantity">Product Quantity</string>
 </resources>
