--- a/RoomDemo/app/src/main/res/values/strings.xml
+++ b/RoomDemo/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="not_assigned">Not assigned</string>
     <string name="product_name">Product Name</string>
     <string name="product_quantity">Product Quantity</string>
+    <string name="delete">Delete</string>
 </resources>
