--- a/RoomDemo/app/src/main/res/values/strings.xml
+++ b/RoomDemo/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="product_name">Product Name</string>
     <string name="product_quantity">Product Quantity</string>
     <string name="delete">Delete</string>
+    <string name="add">Add</string>
+    <string name="find">Find</string>
 </resources>
