--- a/RoomDemo/app/src/main/res/values/strings.xml
+++ b/RoomDemo/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="delete">Delete</string>
     <string name="add">Add</string>
     <string name="find">Find</string>
+    <string name="deletebutton">deletebutton</string>
 </resources>
